=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2014-05-19  18:00:00 CEST                                    trunk-461
Parenthesis eliminated from xc author labels (J.M.Soler)

modified:
  Docs/siesta.tex
  Src/SiestaXC/Testers/test1.f90
  Src/SiestaXC/Testers/test2.F90
  Src/SiestaXC/Testers/test3.F90
  Src/SiestaXC/Testers/test4.F90
  Src/SiestaXC/Testers/test6.f90
  Src/SiestaXC/ggaxc.f
  Src/SiestaXC/siestaxc.F90
  Src/SiestaXC/xcmod.f90

-----------------------------------------------------------------------
2014-05-13  16:30:00 CEST                                    trunk-460
New GGA and VDW functionals (M.Fritz & J.M.Soler)

* Added 4 GGA functionals by Capelle et al
  Refs: L.S.Pedroza et al, PRB 79, 201106 (2009) and
        M.M.Odashima et al, J. Chem. Theory Comp. 5, 798 (2009)

* Added 2 VDW-DF functionals of 
        V.R.Cooper, PRB 81, 161104(R) (2010)
        K. Berland and P. Hyldgaard, PRB 89, 035412 (2014)

* Fixed PW91 and BLYP GGA functionals 

* Improved accuracy of relativistic LDA exchange

* Corrected a minor bug in vdwxc.F90 (parameter nq->mq)

* Updated and extended XC testers

* Added some test outputs in SiestaXC/Testsers/Reference

* m_timer.F90 has been added to SIESTA_SRCS in SiestaXC/makefile

added:
  Src/SiestaXC/Testers/Reference/
  Src/SiestaXC/Testers/Reference/test1.out
  Src/SiestaXC/Testers/Reference/test2.out
  Src/SiestaXC/Testers/Reference/test3.out
  Src/SiestaXC/Testers/Reference/test4.out
  Src/SiestaXC/Testers/test6.f90
  Src/SiestaXC/Testers/test6.m
renamed:
  Src/SiestaXC/Testers/test2.f90 => Src/SiestaXC/Testers/test2.F90
modified:
  Docs/CHANGES
  Docs/siesta.tex
  Src/SiestaXC/Testers/makefile
  Src/SiestaXC/Testers/test1.f90
  Src/SiestaXC/Testers/test2.F90